Fix bug #51056: fread() on blocking stream will block even if data is available

This is applied only on socket connection which already returns
immediately if there is no data in the buffer.